# rhiza-core

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: copilot-setup-steps.yml  rhiza_book.yml  rhiza_validate.yml
.rhiza/: rhiza.mk  template-bundles.yml  template.yml.example
.rhiza/make.d/: book.mk  bootstrap.mk
docs/: ARCHITECTURE.md  MIGRATION_GUIDE.md  TEMPLATE_DEVELOPMENT.md
