[project]
name = "rhiza-core"
version = "0.1.0"
description = "Core reusable configuration templates for Rhiza language templates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Thomas Schmelzer" }
]
keywords = ["templates", "configuration", "ci", "makefile", "devops", "core"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jebel-quant/rhiza-core"
Repository = "https://github.com/jebel-quant/rhiza-core"
Issues = "https://github.com/jebel-quant/rhiza-core/issues"
